--- a/index.html
+++ b/index.html
@@ -1,11 +1,38 @@
-<?php
-  date_default_timezone_set( "America/Chicago" );
 
-  require_once "common/Display.php";
-  
-  Display::openBody();
-  Display::openContainer();
-?>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title>j volpe dot com</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+    
+    <style type="text/css">
+      html {
+        overflow-y: scroll;
+      }
+      body {
+        padding-top: 60px;
+        padding-bottom: 40px;
+      }
+      .centered {
+        text-align:center
+      }   
+    </style>
+
+    <!--[if lt IE 9]>
+      <script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+
+  </head>
+
+  <body>
+    <div class="container-fluid">
       <div class="row-fluid"> 
         <div class="span12">
           <h1 class="centered" id="main-header" style="margin-top: 20%;">
@@ -17,9 +44,13 @@
         </div>
       </div> <!-- row -->
 
-<?php Display::closeContainer(); ?>
+    <!--
+      <footer>
+        <p class="pull-right muted">
+                    &copy; j volpe 2012           - 2019        </p>        
+      </footer>
+    -->
 
-      <script type="text/javascript">
-      </script>
-
-<?php Display::closeBody(); ?>
+    </div><!--/.fluid-container-->
+  </body>
+</html>
