--- a/index.html
+++ b/index.html
@@ -43,14 +43,11 @@
           </h4>
         </div>
       </div> <!-- row -->
-
     <!--
       <footer>
-        <p class="pull-right muted">
-                    &copy; j volpe 2012           - 2019        </p>        
+        <p class="pull-right muted">&copy; j volpe 2020</p>        
       </footer>
     -->
-
     </div><!--/.fluid-container-->
   </body>
 </html>
